--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Registration</h1>
+        <input type="text" placeholder="Enter your name">
+        <input type="text" placeholder="Enter your password">
+        <button>Enter</button>
+    </div>
 </body>
 </html>
