--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div>
         <h1>Registration</h1>
         <input type="text" placeholder="Enter your name">
         <input type="text" placeholder="Enter your password">
-        <button>Enter</button>
+        <a href="">Enter</a>
     </div>
 </body>
+
 </html>
