--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="#">Home</a>
         <a href="#">Home</a>
         <a href="#">Home</a>
+        <a href="#">About</a>
       </nav>
     </header>
   </body>
