--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         <a href="#">About</a>
       </nav>
     </header>
+    <main>
+        <div class="box">
+            <img src="https://yandex.kz/images/search?text=nature&img_url=https%3A%2F%2Fa-static.besthdwallpaper.com%2Fnature-greenery-background-wallpaper-2560x1920-10692_27.jpg&pos=5&rpt=simage&stype=image&lr=163&parent-reqid=1751888031654595-1857650680839842738-balancer-term-kz-ext-1-BAL&source=serp" alt="Gooog">
+            <h1>Nature</h1>
+            <p>This is content about the nature</p>
+        </div>
+    </main>
   </body>
 </html>
 </head>
