--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <input type="text" placeholder="Enter your password">
         <a href="">Enter</a>
     </div>
+    <footer>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </footer>
 </body>
 
 </html>
