--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         <input type="text" placeholder="Enter your password">
         <a href="">Enter</a>
     </div>
+    <footer>
+        <h1>fdslkjld</h1>
+        <div></div>
+
+        <aside></aside>
+    </footer>
 </body>
 
 </html>
