--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </div>
     <footer>
         <div>
-            <div></div>
+            <div>
+                <h1>company</h1>
+            </div>
             <div></div>
             <div></div>
             <div></div>
