--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -35,7 +36,7 @@
         <div></div>
 
         <aside></aside>
-        <div>
+        <div class="footer">
             <div>
                 <h1>company</h1>
             </div>
